# libisocodes

./: .gitignore  CHANGELOG.md  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen  config.h.in  configure  configure.ac  exceptions.c  exceptions.vala  iso_3166.c  iso_3166.vala  iso_3166_entry.c  isocodes.c  isocodes.vala  libisocodes.h  libisocodes.pc.in  old-makefile
po/: LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  en@boldquot.po  en@quot.po  es.po  fr.po  libisocodes.pot  pt.po  ru.po  si.po  sv.po  vi.po
src/: exceptions.vala  iso_15924.vala  iso_15924_entry.vala  iso_15924_item.vala  iso_3166.vala  iso_3166_2.vala  iso_3166_2_entry.vala  iso_3166_2_item.vala  iso_3166_entry.vala  iso_3166_item.vala  iso_4217.vala  iso_4217_entry.vala  iso_4217_item.vala  iso_639.vala  iso_639_3.vala  iso_639_3_entry.vala  iso_639_3_item.vala  iso_639_5.vala  iso_639_5_item.vala  iso_639_entry.vala  iso_639_item.vala  isocodes.vala
tests/: codetest.vala  test_iso_15924.vala  test_iso_3166.vala  test_iso_3166_2.vala  test_iso_4217.vala  test_iso_639.vala  test_iso_639_3.vala  test_iso_639_5.vala
tests/data/: iso_15924.xml  iso_3166.xml  iso_4217.xml  iso_639.xml
tests/data/3.x/: iso_3166_2.xml  iso_639_3.xml  iso_639_5.xml  no-iso-data.txt
vapi/: config.vapi
